# monoterm

./: CMakeLists.txt  README.md
src/: colour.c  colour.h  main.c  term.c  term.h
test/: colour_tests.c  term_tests.c  test.h
